--- a/vue_project/package.json
+++ b/vue_project/package.json
@@ -11,7 +11,10 @@
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-axios": "^3.3.7"
+    "vue-axios": "^3.3.7",
+    "vue-router": "^3.5.2",
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
